--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -1,6 +1,6 @@
 %header.header グループを作成しました
-%div.wrapper
-  %div.left-container
+%wrapper
+  %left-container
     %div.left-header
       %div.left-header__container
         %p.left-header__container__group seo
@@ -21,7 +21,7 @@
       %div.left-contents__content
         %p.left-contents__content__name example
         %p.left-contents__content__message まだメッセージがありません
-  %div.right-container
+  %right-container
     %div.right-header
       %div.right-header__title
         %p.right-header__title__name test-group
