--- a/app/assets/stylesheets/_index.scss
+++ b/app/assets/stylesheets/_index.scss
@@ -169,7 +169,7 @@ html{
                     padding: 0px 30px;
                     display: inline-block;
                     cursor: pointer;
-                    margin-left: 15px;
+                    margin-right: 5px;
                     color: $white;
                   }
                 }   
