--- a/app/views/messages/_message.html.haml
+++ b/app/views/messages/_message.html.haml
@@ -1,12 +1,11 @@
-.left-contents__content
-  .left-content
-    .left-content__name
+.right-contents__first
+  ..right-contents__first__user
+    .right-contents__first__user__name 
       = message.user.name
-    .upper-message__date
+    .right-contents__first__user__time 
       = message.created_at.strftime("%Y/%m/%d %H:%M")
-  .lower-meesage
+  .right-contents__first__text
     - if message.content.present?
       %p.lower-message__content
         = message.content
     = image_tag message.image.url, class: 'lower-message__image' if message.image.present?
-
