--- a/app/assets/stylesheets/_index.scss
+++ b/app/assets/stylesheets/_index.scss
@@ -111,6 +111,7 @@ html{
               background-color: #fafafa;
               height: calc(100vh - 190px);
               padding: 0px 40px;
+              overflow: scroll;
                 &__first {
                   padding-top: 46px;
                   margin-bottom: 40px;
