--- a/app/views/messages/_message.html.haml
+++ b/app/views/messages/_message.html.haml
@@ -1,5 +1,5 @@
 .right-contents__first
-  ..right-contents__first__user
+  .right-contents__first__user
     .right-contents__first__user__name 
       = message.user.name
     .right-contents__first__user__time 
