--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -34,7 +34,7 @@
       = render @messages
     .right-message    
       .right-message__form
-        = form_for [@group, @message] do |f|
+        = form_for [@group, @message], {id: 'new_message'} do |f|
           = f.text_field :content, class: 'right-message__form__text', placeholder: 'type a message'
           .right-message__form__label
             = f.label :image do
