--- a/app/views/messages/_message.html.haml
+++ b/app/views/messages/_message.html.haml
@@ -1,4 +1,4 @@
-.right-contents__first
+.right-contents__first{data: {id: message.id }}
   .right-contents__first__user
     .right-contents__first__user__name 
       = message.user.name
